--- a/tasks/server.yml
+++ b/tasks/server.yml
@@ -12,7 +12,7 @@
 - name: put consul server configuration
   template:
     src: server.json.j2
-    dest: /etc/consul.d/server.json
+    dest: /etc/consul.d/config.json
     owner: root
     group: root
     mode: 0644
