add upstart start script and claim trusty support

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -8,6 +8,7 @@ galaxy_info:
     - name: Ubuntu
       versions:
         - xenial
+        - trusty
   galaxy_tags:
     - system
   dependencies: []
