--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,8 @@
 ---
 consul_mode: "client"
 consul_dnsmasq: yes
+consul_service_enabled: no
+consul_service_started: no
 
 consul_src: https://releases.hashicorp.com/consul/0.9.3/consul_0.9.3_linux_amd64.zip
 consul_dest: /usr/local/bin
