--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,11 +1,18 @@
 ---
+- name: update apt-cache
+  apt:
+    update_cache: yes
+    cache_valid_time: 3600
+  changed_when: no
+  tags:
+    - install
+
 - name: install dependencies
   apt:
     name:
       - curl
       - unzip
     state: present
-    update_cache: yes
     cache_valid_time: 3600
   tags:
     - install
