--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -12,6 +12,7 @@ consul_data_dir: "{{ consul_dir }}/data"
 consul_conf_dir: /etc/consul.d
 
 consul_conf_datacenter: dc1
+consul_conf_domain: consul
 consul_conf_client_addr: 0.0.0.0
 consul_conf_bind_addr: 0.0.0.0
 consul_conf_bootstrap_expect: 3
