--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,9 +1,8 @@
 ---
 - name: update apt-cache
   apt:
-    update_cache: yes
+    update_cache: 'True'
     cache_valid_time: 3600
-  changed_when: no
   tags:
     - install
 
@@ -22,7 +21,7 @@
     src: "{{ consul_src }}"
     dest: "{{ consul_dest }}"
     mode: 0755
-    remote_src: yes
+    remote_src: 'True'
   tags:
     - install
 
@@ -56,7 +55,8 @@
   tags:
     - install
 
-- assert:
+- name: assert consul mode
+  assert:
     that:
       - 'consul_mode in ("client", "server")'
 
@@ -65,8 +65,17 @@
   tags:
     - configuration
 
-- set_fact:
+- name: set datacenter to current region
+  set_fact:
     consul_datacenter: "{{ ansible_ec2_placement_region }}"
+  when: ansible_ec2_placement_region is defined
+  tags:
+    - configuration
+
+- name: set datacenter to default value
+  set_fact:
+    consul_datacenter: "{{ consul_conf_datacenter }}"
+  when: ansible_ec2_placement_region is undefined
   tags:
     - configuration
 
