--- a/tasks/dnsmasq.yml
+++ b/tasks/dnsmasq.yml
@@ -3,7 +3,7 @@
   apt:
     name: dnsmasq
     state: present
-    update_cache: 'True'
+    update_cache: yes
     cache_valid_time: 3600
   tags:
     - dnsmasq
@@ -23,6 +23,6 @@
 - name: enable dnsmasq
   service:
     name: dnsmasq
-    enabled: 'True'
+    enabled: yes
   tags:
     - dnsmasq
