--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: update apt-cache
   apt:
-    update_cache: 'True'
+    update_cache: true
     cache_valid_time: 3600
   tags:
     - install
@@ -21,7 +21,7 @@
     src: "{{ consul_src }}"
     dest: "{{ consul_dest }}"
     mode: 0755
-    remote_src: 'True'
+    remote_src: true
   tags:
     - install
 
