--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -4,3 +4,9 @@
     name: dnsmasq
     state: restarted
   when: lookup('env', 'MOLECULE_DRIVER_NAME') != 'docker'
+
+- name: restart consul
+  service:
+    name: consul
+    state: restarted
+  when: lookup('env', 'MOLECULE_DRIVER_NAME') != 'docker'
