--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -3,10 +3,11 @@
   service:
     name: dnsmasq
     state: restarted
-  when: lookup('env', 'MOLECULE_DRIVER_NAME') != 'docker'
+  when: consul_service_started and lookup('env', 'MOLECULE_DRIVER_NAME') != 'docker'
+
 
 - name: restart consul
   service:
     name: consul
     state: restarted
-  when: lookup('env', 'MOLECULE_DRIVER_NAME') != 'docker'
+  when: consul_service_started and lookup('env', 'MOLECULE_DRIVER_NAME') != 'docker'
